--- a/index.html
+++ b/index.html
@@ -11,16 +11,43 @@
   <!-- page content goes into <body> -->
   <body>
     <div id="cs1300-gallery">
-      <h1>Welcome to my bakery</h1>
-      <p>Add your own images and styles!</p>
+      <h1>Welcome to my Bakery</h1>
+      <p>Cream Puffs</p>
+
+
 
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
+
       <div class="gallery-container">
-        <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u">
+
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1611315963977-OEYU4BB3SCHURXWKVU8T/vanilla+custard_small.png" alt="pastry 1">
+          <p>Original</p>
+        </div>
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1612949336904-AW5WOP7UX9E3G10WQX0I/chocolate+custard_small.png" alt="pastry 2">
+          <p>Chocolate</p>
+        </div> 
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1611315986143-YJ00OY0CJWMMK675XI4F/oreo_Small.png" alt="pastry 3">
+          <p>Cookies n' Cream</p>
+        </div>   
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1612949893234-9XIRXOO1K3XNPS7LSMSR/chocolate+shell_small.png" alt="pastry 4">
+          <p>Eclair</p>
+        </div>
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1612949336913-24NZYVXARDUTLM08QEGH/green+tea_Small.png" alt="pastry 5">
+          <p>Matcha</p>
+        </div>
+        <div>
+          <img class="gallery-item" src="https://images.squarespace-cdn.com/content/v1/600a96cbf8894d79eb1e1b1f/1613547703713-830T67ZX01MX7OAFCBAL/creme+brulee_small.png" alt="pastry 6">
+          <p>Crème Brûlée</p>
+        </div>
       </div>
 
       <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
-      <!-- <button onclick="updatePage()">Press this button to display some fruit data</button> -->
+      <button onclick="updatePage()">Press this button to display some fruit data</button>
     </div>
   </body>
 
